--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jose Matute",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13"
   }
