--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "An app that can convert mips instructions to binary and hex values, as well as the other way around.",
 	"main": "app.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node app.js"
 	},
 	"author": "Jose Matute",
 	"license": "ISC",
