--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node app.js"
+		"start": "node app.js",
+		"dev": "nodemon app.js"
 	},
 	"author": "Jose Matute",
 	"license": "ISC",
@@ -13,7 +14,8 @@
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
-		"mongoose": "^5.12.13"
+		"mongoose": "^5.12.13",
+		"nodemon": "^2.0.9"
 	},
 	"engines": {
 		"node": "14.17.0"
